Get Bundler for specific layouts

--- a/SitecoreBundler/SitecoreBundler/Views/TAC/Events/Layouts/Events.cshtml
+++ b/SitecoreBundler/SitecoreBundler/Views/TAC/Events/Layouts/Events.cshtml
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="/Css/Difficulty.css">
     
     <!-- CSS DYNAMICALLY -->
-    @SitecoreBundler.Bundle("styles-min.css")
+    @Html.Sitecore().Bundle("styles-min.css")
     <!-- END - CSS DYNAMICALLY -->    
 
     @Html.Sitecore().VisitorIdentification()
