BungleGroups now can have their individual settings for Bundle, Minify and Agressive Cache

--- a/SitecoreBundler/SitecoreBundler/Views/TAC/Events/Layouts/Events.cshtml
+++ b/SitecoreBundler/SitecoreBundler/Views/TAC/Events/Layouts/Events.cshtml
@@ -144,5 +144,10 @@
     </div>
     <script src="/Scripts/Sitecore.Foundation.Theming.min.js"></script>
     <script src="/Scripts/Navigation.js"></script>
+    
+    <!-- JS DYNAMICALLY -->
+    @Html.Sitecore().Bundle("scripts-min.js")
+    <!-- END - JS DYNAMICALLY -->    
+
 </body>
 </html>
